Changelog
=========

10.2 - (2020-12-04)
---------------------------
* Bug fix: avoid wrong alignment of trailer text field and ensure
  see additional files link takes you to the right section
  [ichim-david refs #125236]

10.1 - (2020-03-31)
---------------------------
* Change: simplify check for metadata_title not being equal to object title 
  [ichimd-david refs #116365]

10.0 - (2019-10-02)
---------------------------
* Upgrade step: Within "Plone > Site setup > Add-ons" click on
  upgrade button available for eea.reports (use a dedicated
  Plone instance as this may take some time).
  [avoinea refs #109515]
* Change: Generate high resolution Publication cover image
  [avoinea refs #109515]
* Bug fix: Optimize imgview adapters by moving code from __init__
  [avoinea refs #109515]

9.3 - (2019-08-16)
--------------------------
* Change: reduced width of pdf download area for better wrapping with column
  area
  [ichim-david refs #106884]
* Change: removed padding from region-content
  [ichim-david refs #106884]

9.2 - (2019-07-17)
--------------------------
* Change: Commented out visualclear element in report template
  [iulianpetchesi refs #107789]
* Change: removed content p and li enlargement, this can be added in a theme
  css if needed
  [ichim-david refs #106884]

9.1 - (2019-02-26)
--------------------------
* Bug fix: fixed the CSS for "Change language" and publication message display
  [alecghica refs #101834]
* Feature: removed/hidden metadata related to EU Publications or which was unused
  [alecghica refs #101834]

9.0 - (2019-01-28)
--------------------------
* Jenkins: Add sonarqube step
  [avoinea refs #101552]

8.9 - (2019-01-15)
--------------------------
* Bug fix: CSS fixes on publication view
  [alecghica refs #101503]

8.7 - (2018-12-10)
-----------------------
* Bug fix: fixed publication toc rendering when toc has several levels
  [ichim-david refs #100603]

8.6 - (2018-09-21)
--------------------------