@@ -1,6 +1,12 @@
 """ eea.reports viewlets
 """
+from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
 from eea.versions.browser.viewlets import CanonicalURL as ViewletBase
+from plone.app.layout.viewlets import common
+from plone.memoize.instance import memoize
+from zope.component.hooks import getSite
+from zope.component import getAdapter
+from eea.reports.relations.interfaces import IGroupRelations
 
 
 class CanonicalURL(ViewletBase):
@@ -25,3 +31,54 @@ class CanonicalURL(ViewletBase):
                 return u'<link rel="canonical" href="%s" />' % canonical_url
 
         return super(CanonicalURL, self).render()
+
+
+class NewerReportVersionsViewlet(common.ViewletBase):
+    """ Newer reports versions displayed as a Viewlet
+    """
+    render = ViewPageTemplateFile('zpt/newer_report.pt')
+
+    @property
+    def available(self):
+        """ Condition for rendering of this viewlet
+        """
+        request = self.context.REQUEST
+        url_hits = ["publications", "soer", "about-us"]
+        url = request.ACTUAL_URL
+        for term in url_hits:
+            if term in url:
+                return True
+        return False
+
+    @memoize
+    def get_report(self):
+        """ Get parent Report if found
+        """
+        context = self.context
+        ptype = context.portal_type
+        if ptype == "Report":
+            return None
+        obj = self.context
+        found = False
+        site = getSite()
+        while True:
+            obj = obj.aq_parent
+            if obj is not site:
+                if obj.portal_type == "Report":
+                    found = True
+                    break
+            else:
+                found = False
+                break
+        if not found:
+            return None
+        return obj
+
+    def is_replaced_by(self):
+        """ Retrieve newer versions of given Report
+        """
+        report = self.get_report()
+        if not report:
+            return []
+        relations = getAdapter(report, IGroupRelations)
+        return relations.forward()
